[package]
name = "atomr-accel-py"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
readme = "README.md"
keywords = ["cuda", "gpu", "python", "pyo3"]
categories = ["concurrency", "asynchronous", "api-bindings"]
description = "Python bindings for atomr-accel. Drives an actor-supervised CUDA pipeline from Python without juggling streams or contexts."
publish = false

[lib]
name = "_native"
crate-type = ["cdylib", "rlib"]

[features]
default = ["extension-module"]
extension-module = ["pyo3/extension-module"]
# Pass-through to feature-gate the corresponding atomr-accel-cuda kernel actors.
cudnn    = ["atomr-accel-cuda/cudnn"]
cufft    = ["atomr-accel-cuda/cufft"]
curand   = ["atomr-accel-cuda/curand"]
cusolver = ["atomr-accel-cuda/cusolver"]
cublaslt = ["atomr-accel-cuda/cublaslt"]
nvrtc    = ["atomr-accel-cuda/nvrtc"]
nccl     = ["atomr-accel-cuda/nccl"]
core-libs     = ["atomr-accel-cuda/core-libs"]
training-libs = ["atomr-accel-cuda/training-libs"]
full-cuda     = ["atomr-accel-cuda/full-cuda"]

# Phase 3 telemetry bindings: NVTX kernel ranges, NVML actor probes,
# CUPTI activity sessions. Each sub-feature mirrors the corresponding
# `atomr-accel-telemetry` cargo feature so consumers pay only for the
# backends they want.
telemetry       = ["dep:atomr-accel-telemetry"]
telemetry-nvtx  = ["telemetry", "atomr-accel-telemetry/nvtx"]
telemetry-nvml  = ["telemetry", "atomr-accel-telemetry/nvml"]
telemetry-cupti = ["telemetry", "atomr-accel-telemetry/cupti"]

# Phase 4 — template-kernel crates. cub is a vanilla CUDA crate with
# no external link-system dependency, so it can ship default-on inside
# wheels that already pull atomr-accel-cuda. cutlass / flashattn /
# tensorrt are gated because their build systems pull in vendored
# CUTLASS headers, FlashAttention csrc, or libnvinfer respectively;
# wheels can opt-in via `--features cutlass,flashattn,tensorrt`.
cub       = ["dep:atomr-accel-cub"]
cutlass   = ["dep:atomr-accel-cutlass"]
flashattn = ["dep:atomr-accel-flashattn"]
tensorrt  = ["dep:atomr-accel-tensorrt"]

[dependencies]
atomr-core   = { workspace = true }
atomr-config = { workspace = true }
atomr-accel-cuda          = { path = "../atomr-accel-cuda",          version = "0.3.3" }
atomr-accel-patterns      = { path = "../atomr-accel-patterns",      version = "0.3.3" }
atomr-accel-train         = { path = "../atomr-accel-train",         version = "0.3.3" }
atomr-accel-agents        = { path = "../atomr-accel-agents",        version = "0.3.3" }
atomr-accel-cuda-realtime = { path = "../atomr-accel-cuda-realtime", version = "0.3.3" }
atomr-accel-telemetry     = { path = "../atomr-accel-telemetry",     version = "0.3.3", optional = true }
atomr-accel-cub           = { path = "../atomr-accel-cub",           version = "0.3.3", optional = true }
atomr-accel-cutlass       = { path = "../atomr-accel-cutlass",       version = "0.3.3", optional = true }
atomr-accel-flashattn     = { path = "../atomr-accel-flashattn",     version = "0.3.3", optional = true }
atomr-accel-tensorrt      = { path = "../atomr-accel-tensorrt",      version = "0.3.3", optional = true }
cudarc       = { workspace = true }

pyo3                = { workspace = true, features = ["abi3-py310", "macros"] }
pyo3-async-runtimes = { workspace = true }
numpy               = { workspace = true }
tokio        = { workspace = true }
parking_lot  = { workspace = true }
tracing      = { workspace = true }
once_cell    = { workspace = true }
