[build-system]
requires = ["maturin>=1.5,<2.0"]
build-backend = "maturin"

[project]
name = "atomr-accel"
description = "Actor-shaped face for compute-acceleration backends (NVIDIA CUDA shipping; ROCm / Metal / oneAPI / Vulkan future), on the atomr actor runtime."
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.10"
dynamic = ["version"]
authors = [{ name = "atomr-accel contributors" }]
keywords = ["cuda", "gpu", "atomr", "actor", "ml", "accelerator"]
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Rust",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Scientific/Engineering",
    "Topic :: Software Development :: Libraries",
]
dependencies = ["numpy>=1.24"]

[project.optional-dependencies]
test = ["pytest>=7", "numpy>=1.24"]

[project.urls]
Source = "https://github.com/rustakka/atomr-accel"

[tool.maturin]
python-source = "python"
module-name = "atomr_accel._native"
features = ["pyo3/extension-module"]
manifest-path = "Cargo.toml"
