[package]
name = "atomr-accel"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
authors.workspace = true
readme = "../../README.md"
keywords.workspace = true
categories.workspace = true
description = "Backend-agnostic compute-acceleration core. Defines the AccelBackend trait, AccelRef<T> typed pointers, AccelError enum, and CompletionStrategy — the abstraction layer that lets atomr-accel-cuda (NVIDIA), and future ROCm / Metal / oneAPI / Vulkan backends plug into the same actor surface."

[features]
default = []
# Re-export the CUDA backend at `atomr_accel::cuda`. Most users want
# this on; turn it off only when building backend-agnostic libraries
# that should not pull cudarc in.
cuda    = ["dep:atomr-accel-cuda"]

[dependencies]
atomr-core   = { workspace = true }
atomr-config = { workspace = true }
atomr-accel-cuda = { path = "../atomr-accel-cuda", version = "0.1.0", optional = true }
async-trait  = { workspace = true }
thiserror    = { workspace = true }
tokio        = { workspace = true }

[lib]
path = "src/lib.rs"
