[package]
name = "atomr-accel"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
authors.workspace = true
readme = "../../README.md"
keywords.workspace = true
categories.workspace = true
description = "Backend-agnostic compute-acceleration core. Defines the AccelBackend trait, AccelRef<T> typed pointers, AccelError enum, and CompletionStrategy — the abstraction layer that lets atomr-accel-cuda (NVIDIA), and future ROCm / Metal / oneAPI / Vulkan backends plug into the same actor surface."

[features]
default = []
# Half-precision dtype impls for `AccelDtype` (`half::f16`, `half::bf16`).
f16     = ["dep:half"]
# 8-bit float wrapper types (`F8E4m3`, `F8E5m2`) and their `AccelDtype` impls.
# Hopper+ for cuBLASLt fp8 GEMM and FlashAttention v3.
f8      = []
# 4-bit float wrapper type (`F4E2m1`) and its `AccelDtype` impl. Blackwell.
f4      = []

[dependencies]
atomr-core   = { workspace = true }
atomr-config = { workspace = true }
async-trait  = { workspace = true }
thiserror    = { workspace = true }
tokio        = { workspace = true }
half         = { version = "2", optional = true }

[lib]
path = "src/lib.rs"
