[package]
name = "rakka-accel-agents"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
readme = "README.md"
keywords = ["cuda", "gpu", "actor", "rag", "llm"]
categories = ["concurrency", "asynchronous", "science"]
description = "Agentic / LLM GPU actor blueprints on rakka-accel-cuda: RagPipeline, EmbeddingCache, CpuVectorIndex, SharedGpuStateCoordinator, LangGraphGpuActor."

[dependencies]
rakka-core   = { workspace = true }
rakka-config = { workspace = true }
rakka-macros = { workspace = true }
rakka-accel-cuda   = { path = "../rakka-accel-cuda", version = "0.2.7" }
async-trait  = { workspace = true }
tokio        = { workspace = true }
parking_lot  = { workspace = true }
tracing      = { workspace = true }
thiserror    = { workspace = true }

[lib]
path = "src/lib.rs"
