[package]
name = "rakka-accel-train"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
readme = "README.md"
keywords = ["cuda", "gpu", "actor", "training", "ml"]
categories = ["concurrency", "asynchronous", "science"]
description = "Distributed training blueprints on rakka-accel-cuda: DataParallelTrainer, PipelineParallelTrainer, TensorParallelTrainer, AsyncParameterServer, optimizer + loss enums."

[dependencies]
rakka-core         = { workspace = true }
rakka-config       = { workspace = true }
rakka-macros       = { workspace = true }
rakka-accel-cuda         = { path = "../rakka-accel-cuda", version = "0.2.6" }
rakka-accel-patterns = { path = "../rakka-accel-patterns", version = "0.2.6" }
async-trait        = { workspace = true }
tokio              = { workspace = true }
parking_lot        = { workspace = true }
tracing            = { workspace = true }
thiserror          = { workspace = true }

[lib]
path = "src/lib.rs"
