[package]
name = "rakka-cuda-patterns"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Universal GPU actor blueprints (DynamicBatchingServer, ModelReplicaPool, FairShareScheduler, GpuMockActor, …) — §7.2"

[dependencies]
rakka-core   = { workspace = true }
rakka        = { workspace = true }
rakka-config = { workspace = true }
rakka-cuda   = { path = "../rakka-cuda", version = "0.0.1" }
async-trait  = { workspace = true }
tokio        = { workspace = true }
parking_lot  = { workspace = true }
tracing      = { workspace = true }
thiserror    = { workspace = true }

[dev-dependencies]
tracing-subscriber = { workspace = true }

[lib]
path = "src/lib.rs"

[[example]]
name = "batching_no_gpu"

[[example]]
name = "cascade_no_gpu"

[[example]]
name = "fair_share_no_gpu"

[[example]]
name = "speculative_no_gpu"

[[example]]
name = "moe_no_gpu"
